# blackroad-tools

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  README.md  agent_test_pipeline.py  artifacts.py  birth_agents.py  blackroad-audit.sh  blackroad_bootstrap.py  branch_audit.py  build_cluster_manifests.py  build_metaverse_roster.py  clerk-config.json  codex_audit_starter.py  codex_multi_repo_loader.py  codex_pipeline.py  codex_repo_improver.py  crm.py  db.py  enrich_agent_manifests.py  environments_summary.py  erp.py  everything_cipher.py  everything_cipher_webcrypto.js  install_self_heal_pack.sh  lucidia_orin_trt_install.sh  manifest_profile.py  package-lock.json  package.json  perspective_calc.py  policy_gate.spec.ts  policy_gate.ts  pully.py  pyproject.toml  railway.toml  requirements.txt  run_multi_repo_loader.sh  service-mesh.json  (+8 more)
.github/workflows/: auto-assign.yml  auto-deploy.yml  blackroad-agents.yml  (+34 more)
autobuilder/: make_fixes.js  make_fixes.ts
branch-cleanup/: README.md  backup-and-delete.ts  cleanup.ts  config.yaml  ghql.ts  permissions.ts  reporters.ts  tsconfig.json
complexity/: phase_sat_flow.py
dynamics/: spectral_gap.py
geometry/: angle_defect.py
kpis/: compute.js  compute.ts  types.ts
lucidia-autotester/: dev_requirements.txt
lucidia-review/: requirements.txt
magic/: magic_squares.py
metrics/: README.md  __init__.py  spiral_pitch.py
miners/: Dockerfile  README.md  bridge.js  package-lock.json  package.json
number_theory/: trig_roots.py  zeta_pitch.py
policies/: check_budgets.js  check_budgets.ts
projective/: cross_ratio.py  depth_solver.py
pulse/: slack.js  slack.ts  write.js  write.ts
rf/: README.md  __init__.py  spiral_loss.py
src/: index.ts  router.ts
tests/: conftest.py  test_angle_defect.py  test_cross_ratio.py  test_everything_cipher.py  test_magic_squares.py  test_perspective.py  test_pully.py  test_spiral_loss.py  test_trig_roots.py
timemachine/: index.py
tools-adapter/: .env.example  docker-compose.yml  package-lock.json  package.json  server.js
verification/: prompt_templates.py  run_blackroad_claim_verifier.py
(+14 files in other folders)
