[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackroad-tools"
version = "0.1.0"
description = "BlackRoad Tools - ERP, CRM, manifest profiler, cluster builders, and DevOps utilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BlackRoad OS", email = "hello@blackroad.io" }
]
keywords = [
    "devops",
    "erp",
    "crm",
    "kubernetes",
    "cluster",
    "manifest",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
erp = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
k8s = [
    "kubernetes>=26.0.0",
]

[project.scripts]
br-tools = "tools_cli:main"
br-erp = "erp:main"
br-crm = "crm:main"
br-manifest = "manifest_profile:main"
br-pully = "pully:main"

[project.urls]
Homepage = "https://blackroad.io"
Documentation = "https://docs.blackroad.io/tools"
Repository = "https://github.com/BlackRoad-OS/blackroad-tools"
Issues = "https://github.com/BlackRoad-OS/blackroad-tools/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
